# leonardo-admin-honeypot

./: ChangeLog  MANIFEST.in  README.rst  setup.cfg
leonardo_admin_honeypot/: __init__.py  forms.py  listeners.py  models.py  signals.py  urls.py  views.py
leonardo_admin_honeypot/apps/: admin_honeypot.py
leonardo_admin_honeypot/templates/admin_honeypot/: email_message.txt
